--- a/munin/templates/default/munin-node.conf.erb
+++ b/munin/templates/default/munin-node.conf.erb
@@ -36,8 +36,8 @@ host_name <%= node[:hostname] %>.ec2.internal
 # doesn't understand CIDR-style network notation.  You may repeat
 # the allow line as many times as you'd like
 
-<% @munin_servers.each do |server| -%>
-allow ^<%= server[:ipaddress].to_s.gsub(/\./, '\.') %>$
+<% @munin_servers.each do |ip| -%>
+allow ^<%= ip.to_s.gsub(/\./, '\.') %>$
 <% end -%>
 allow ^127\.0\.0\.1$
 
